--- a/style.css
+++ b/style.css
@@ -1,8 +1,205 @@
+body {
+  margin: 0;
+  background-color: #ecf2f8;
+  font-family: 'Manrope', sans-serif;
+  font-size: 13px;
+}
+
+h1, p {
+  margin: 0 0 20px;
+}
+
+h2 {
+  margin: 0;
+}
+
+p {
+  font-size: 0.8rem;
+  line-height: 1.5;
+}
+
+.container {
+  margin: 0;
+  padding: 0;
+  height: 96vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.imgLeft {
+  width: 300px;
+  height: 300px;
+}
+
+.imgLeft img {
+  width: 125%;
+  height: 100%;
+  border-radius: 20px
+}
+
+.textRight {
+  border-radius: 0 20px 20px 0;
+  width: 420px;
+  height: 300px;
+  background-color: #fff;
+  font-size: 0.6rem;
+}
+
+.contentRight {
+  padding: 40px;
+}
+
+.contact {
+  margin-top: 30px;
+  width: 100%;
+}
+
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  float: left;
+}
+
+.contactName {
+  box-sizing: border-box;
+  padding-left: 15px;
+  width: 70%;
+  float: left;
+}
+
+.share {
+  background-color: #ecf2f8;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  float: right;
+  margin-top: 5px;
+}
+
+.shareImage {
+  content: url("images/icon-share.svg");
+}
+
+.sharePop {
+  background-color: #48556a;
+  border-radius: 10px;
+  position: relative;
+  bottom: 147px;
+  left: 215px;
+  height: 55px;
+  width: 220px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fab {
+  font-size: 1.2rem;
+  color: #fff;
+  padding: 0 10px;
+}
+
+.sharePop p {
+  font-family: "Manrope";
+  font-size: 0.7rem;
+  letter-spacing: 5px;
+  margin: 0;
+}
+
+.shareHidden {
+  display: none;
+  content: url("images/icon-share-2.svg");
+}
+
+.shareHiddenImage {
+  content: url("images/icon-share-2.svg");
+  background-color: #48556a;
+}
+
+.arrow {
+  background-color: #48556a;
+  position: relative;
+  bottom: 157px;
+  left: 315px;
+  height: 20px;
+  width: 20px;
+  transform: rotate(45deg);
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
+  padding-bottom: 5px
 }
 
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: #3e52a3;
+}
+
+.elmntHidden {
+  display: none;
+}
+
+@media screen and (max-width: 700px) {
+  p {
+    font-size: 0.82rem;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    height: 120vh;
+  }
+
+  .imgLeft {
+    padding-top: 60px;
+    width: 320px;
+    height: 200px;
+  }
+
+  .imgLeft img {
+    width: 320px;
+    height: 200px;
+    border-radius: 10px 10px 0 0;
+  }
+
+  .textRight {
+    border-radius: 0 0 10px 10px;
+    width: 320px;
+    height: 300px;
+    background-color: #fff;
+    font-size: 0.50rem;
+  }
+
+  .contentRight {
+    padding: 30px;
+  }
+
+  .sharePop {
+    border-radius: 0 0 10px 10px;
+    bottom: 0;
+    left: -30px;
+    height: 55px;
+    width: 320px;
+    justify-content: flex-start;
+  }
+
+  .fab {
+    padding: 0 8px;
+  }
+
+  .sharePop p {
+    margin-left: 20px;
+  }
+
+  .shareHidden {
+    display: flex;
+    margin-left: 60px;
+    background-color: #6d7f97;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+  }
 }
